--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/ejecucion-financiera-gbftrec/ejecucion-financiera-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/ejecucion-financiera-gbftrec/ejecucion-financiera-gbftrec.component.html
@@ -1,1 +1,20 @@
-<p>ejecucion-financiera-gbftrec works!</p>
+<mat-card class="shipping-card mainGris">
+    <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text textoGris">
+            Ejecución presupuestal
+        </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <app-tabla-ejpresupuestal-gbftrec></app-tabla-ejpresupuestal-gbftrec>
+    </mat-card-content>
+</mat-card>
+<mat-card class="shipping-card mainGris" style="margin-top: 3em;">
+    <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text textoGris">
+            Ejecución financiera
+        </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <app-tabla-ejfinanciera-gbftrec></app-tabla-ejfinanciera-gbftrec>
+    </mat-card-content>
+</mat-card>
