--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-otros-descuentos-og-gbftrec/tabla-otros-descuentos-og-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-otros-descuentos-og-gbftrec/tabla-otros-descuentos-og-gbftrec.component.html
@@ -1,30 +1,3 @@
-<!--
-<div class="table-responsive">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="concepto">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.concepto }}</b> </td>
-            <td mat-footer-cell *matFooterCellDef> <b>Valor total</b> </td>
-        </ng-container>
-        <ng-container matColumnDef="descuento">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Concepto de pago </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.descuento }} </td>
-            <td mat-footer-cell *matFooterCellDef> Total </td>
-        </ng-container>
-        <ng-container *ngFor="let columna of ELEMENT_DATA" [matColumnDef]="columna.name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ columna.titulo }} </th>
-            <td mat-cell *matCellDef="let element" align="center"> ${{element[columna.name]}} </td>
-            <td mat-footer-cell *matFooterCellDef> Total </td>
-        </ng-container>
-        <ng-container matColumnDef="total">
-            <td *matFooterCellDef> $60.000 </td>
-          </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <tr mat-footer-row *matFooterRowDef="displayedColumnsFooter"></tr>
-    </table>
-</div>
--->
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="mr-table">
     
@@ -35,7 +8,7 @@
       </ng-container>
     
       <ng-container matColumnDef="descuento">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor despues de la modificación </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Descuento </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.descuento }} </td>
         <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">$60.000</td>
       </ng-container>
