--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejfinanciera-gbftrec/tabla-ejfinanciera-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejfinanciera-gbftrec/tabla-ejfinanciera-gbftrec.component.html
@@ -2,28 +2,28 @@
     <table mat-table [dataSource]="dataSource" matSort class="mr-table">
     
       <ng-container matColumnDef="componente">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Concepto </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Concepto </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.componente }}</b> </td>
         <td *matFooterCellDef align="center" class="auxiliarTd"> <b>Valor total</b> </td>
       </ng-container>
     
       <ng-container matColumnDef="totalComprometido">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Total comprometido </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Total comprometido </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.totalComprometido }} </td>
         <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">$105.000.000</td>
       </ng-container>
       <ng-container matColumnDef="ordenadoGirarAntesdeImpuestos">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Facturado antes de impuestos  </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Facturado antes de impuestos  </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.ordenadoGirarAntesdeImpuestos }} </td>
         <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">$84.100.000</td>
       </ng-container>
       <ng-container matColumnDef="saldo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Saldo </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.saldo }} </td>
         <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">$20.900.000</td>
       </ng-container>
       <ng-container matColumnDef="porcentajeEjecucionFinanciera">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje de ejecución financiera </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Porcentaje de ejecución financiera </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.porcentajeEjecucionFinanciera }} </td>
         <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">80%</td>
       </ng-container>
