--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -1,1 +1,85 @@
-<p>traslado-recursos-gbftrec works!</p>
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+    <div align="center">
+        <label class="label-left" for="requiereTrasladoRecursos">¿Se requiere registrar un traslado de
+            recursos entre los aportantes y fuentes que financian este proyecto, antes de aprobar el
+            balance financiero?</label>
+    </div>
+    <div class="row">
+        <div class="col-md-12" style="padding-left: 0;">
+            <div class="row">
+                <div class="col">
+                    <mat-radio-group class="radioInput" formControlName="requiereTrasladoRecursos" required>
+                        <mat-radio-button [value]="true">Sí</mat-radio-button>
+                        <mat-radio-button [value]="false">No</mat-radio-button>
+                    </mat-radio-group>
+                    <span class="required-form-group" style="margin-left: 1px;">*</span>
+                </div>
+                <span class="icon-incompleto">
+                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                        [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip" *ngIf="
+                      (addressForm.get('requiereTrasladoRecursos').invalid && addressForm.get('requiereTrasladoRecursos').touched) ||
+                      (addressForm.get('requiereTrasladoRecursos').invalid && estaEditando)
+                    " />
+                </span>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('requiereTrasladoRecursos').value === true">
+        <div class="text-area-quill izqTitle helperWidthText" [class.color-secondaryColor]="
+            (addressForm.get('justificacionTraslado').invalid && addressForm.get('justificacionTraslado').touched) ||
+            (addressForm.get('justificacionTraslado').invalid && estaEditando)
+          ">
+            <label for="justificacionTraslado" class="text-area-quill--label" style="font-size: 16px" [ngStyle]="{ color: (addressForm.get('justificacionTraslado').invalid && addressForm.get('justificacionTraslado').touched) ||
+            (addressForm.get('justificacionTraslado').invalid && estaEditando) ? '#d21e18' : '#174193' }">
+            Justificación del traslado entre aportantes y fuentes del proyecto
+            </label>
+            <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                (onContentChanged)="maxLength($event, 1000)" formControlName="justificacionTraslado"
+                #justificacionTraslado></quill-editor>
+        </div>
+        <span class="contador miles" *ngIf="addressForm.get('justificacionTraslado').value">
+            {{ 1000 - textoLimpio(justificacionTraslado.quillEditor, 1000) }}
+        </span>
+        <span class="contador miles"
+            *ngIf="addressForm.get('justificacionTraslado').value === '' || addressForm.get('justificacionTraslado').value === null">
+            1000
+        </span>
+        <span class="icon-incompleto">
+            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip" *ngIf="
+              (addressForm.get('justificacionTraslado').invalid && addressForm.get('justificacionTraslado').touched) ||
+              (addressForm.get('justificacionTraslado').invalid && estaEditando)
+            " />
+        </span>
+    </div>
+    <div class="row" *ngIf="addressForm.get('requiereTrasladoRecursos').value === true">
+        <div class="pr-1">
+            <label for="urlSoporte" class="label-left" [class.color-secondaryColor]="
+              (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
+              (addressForm.get('urlSoporte').invalid && estaEditando)
+            ">
+                URL con soporte
+            </label>
+        </div>
+        <div class="col">
+            <mat-form-field class="full-width">
+              <input matInput required type="urlSoporte" formControlName="urlSoporte" maxlength="1000" />
+            </mat-form-field>
+          </div>
+        <span class="icon-incompleto pr-3em">
+            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip" *ngIf="
+              (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
+              (addressForm.get('urlSoporte').invalid && estaEditando)
+            " />
+        </span>
+    </div>
+    <div class="text-center mb-2em mt-2em">
+        <button mat-button color="warn" class="btn-guardar" type="submit">
+            <img src="assets/img/icon/guardar.svg" alt="Regresar">
+        </button>
+    </div>
+</form>
