--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
@@ -1,1 +1,50 @@
-<p>registrar-liquidacion-contrato works!</p>
+<div class="container text-center">
+    <div class="text-right">
+        <a routerLink="/home" mat-button color="primary" class="btn-regresar">
+            <img src="assets/img/icon/regresar.svg" alt="Regresar">
+        </a>
+    </div>
+    <h1 class="title-menu--h1">
+        Registrar liquidación del contrato
+    </h1>
+    <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
+    <div class="text-info" *ngIf="verAyuda">
+        <button mat-icon-button (click)="verAyuda = false" class="text-info--close">
+            <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda">
+        </button>
+        Bienvenida/o aquí podrá realizar el registro de las liquidaciones de los contratos de obra e interventoría
+        asociados a los proyectos de
+        infraestructura que han sido ejecutados por el FFIE.
+    </div>
+    <p class="info-container" style="margin-top: 2em;">
+        <span class="info-text sin-diligenciar">Sin diligenciar</span>
+        <span class="info-text en-proceso">En proceso</span>
+        <span class="info-text completo">Completo</span>
+    </p>
+    <mat-accordion>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                    Sin registro de liquidación
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <app-tabla-sin-registro-liquidacion-rlc></app-tabla-sin-registro-liquidacion-rlc>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    En proceso de firmas
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            */*/*/*/
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Liquidación
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            */*/*/*/
+        </mat-expansion-panel>
+    </mat-accordion>
+</div>
