--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/verdetalle-edit-gestion-solicitud-rlc/verdetalle-edit-gestion-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/verdetalle-edit-gestion-solicitud-rlc/verdetalle-edit-gestion-solicitud-rlc.component.html
@@ -4,7 +4,7 @@
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
-    <h1 class="title-menu--h1">Gestionar solicitud Liq_0009</h1>
+    <h1 class="title-menu--h1">Ver detalle/Editar gestión solicitud Liq_0009</h1>
     <p class="info-sub-title">
         <span>Número de contrato: <b>N801801</b></span>
     </p>
