--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -26,6 +26,7 @@
           </div>
         </div>
       </div>
+      <!--
       <div class="row">
         <div class="col-md-8">
           <div class="row">
@@ -46,6 +47,7 @@
           </div>
         </div>
       </div>
+      -->
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -116,6 +118,7 @@
           </div>
         </div>
       </div>
+      <!--
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -385,7 +388,7 @@
           </div>
         </div>
       </div>
-
+    -->
     </mat-card-content>
   </mat-card>
   <div class="text-center">
@@ -394,3 +397,6 @@
     </button>
   </div>
 </form>
+<div class="animatedDown" *ngIf="addressForm.controls.tipoNovedad.value">
+  <app-accordion-novedades [tiposNovedadModificacionContractual]="tiposNovedadModificacionContractual"></app-accordion-novedades>
+</div>
